--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "pages":[
-    "pages/index/index",
+    "pages/video/index",
     "pages/canvas/canvas",
-    "pages/video/index"
+    "pages/index/index"
   ],
   "window":{
     "backgroundTextStyle":"light",
